--- a/my-app/src/components/Footer/index.module.css
+++ b/my-app/src/components/Footer/index.module.css
@@ -5,3 +5,41 @@
     flex-grow: 1;
 
 }
+
+.footer {
+    background: #029491;
+
+    height: 137px;
+}
+
+.footer_content {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.scan {
+    width: 141px;
+    height: 111px;
+    left: 60px;
+    top: -24px;
+    margin-left: 60px;
+    background-image: url("../../svg/eqw 1.svg");
+}
+
+
+.text_style {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: right;
+    letter-spacing: 0.01em;
+
+    color: #FFFFFF;
+}
+
+.footer_info {
+    margin-right: 45px;
+}
