--- a/my-app/src/components/Header/index.module.css
+++ b/my-app/src/components/Header/index.module.css
@@ -45,6 +45,7 @@
     height: 111px;
     left: 60px;
     top: -24px;
+    margin-left: 60px;
     background-image: url("../../svg/SGN_09_24_2022_1663968217400 1.svg");
 }
 
