--- a/my-app/src/components/Header/index.module.css
+++ b/my-app/src/components/Header/index.module.css
@@ -71,6 +71,7 @@
 
 .loginOrRegistrate {
     margin-right: 60px;
+
     margin-top: 34px;
     display: flex;
 }
@@ -78,7 +79,8 @@
 .line {
     width: 2px;
     height: 26px;
-
+    margin-right: 18px;
+    margin-left: 18px;
     background-image: url("../../svg/Rectangle 7.svg");
 }
 
