slider not work

--- a/my-app/src/components/Header/index.module.css
+++ b/my-app/src/components/Header/index.module.css
@@ -46,7 +46,7 @@
     left: 60px;
     top: -24px;
     margin-left: 60px;
-    background-image: url("../../svg/SGN_09_24_2022_1663968217400 1.svg");
+    background-image: url("../../svg/skan-head.svg");
 }
 
 .registate {
