--- a/my-app/src/components/Slider/index.module.css
+++ b/my-app/src/components/Slider/index.module.css
@@ -22,5 +22,5 @@
     left: 60px;
     top: -24px;
     margin-left: 60px;
-    background-image: url("../../svg/SGN_09_24_2022_1663968217400 1.svg");
+    background-image: url("../../svg/skan-head.svg");
 }
