--- a/my-app/src/components/HomePage/index.module.css
+++ b/my-app/src/components/HomePage/index.module.css
@@ -191,3 +191,11 @@
 .flex {
     display: flex;
 }
+
+
+.bigPic {
+    width: 1307px;
+    height: 576px;
+
+    background-image: url("../../svg/bigPic.svg");
+}
