--- a/my-app/src/components/Header/index.module.css
+++ b/my-app/src/components/Header/index.module.css
@@ -95,3 +95,20 @@
     background: #7CE3E1;
     border-radius: 5px;
 }
+
+.menu_item_l {
+    margin-left: 49px;
+    border: none;
+    outline: none;
+    background-color: #FFFFFF;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+    margin-top: 38px;
+    letter-spacing: 0.01em;
+
+    color: #000000;
+}
