--- a/my-app/src/components/Login/index.module.css
+++ b/my-app/src/components/Login/index.module.css
@@ -8,4 +8,161 @@
 
 .flex_block {
     display: flex;
+
+}
+
+.h1Text {
+    width: 817px;
+    height: 144px;
+
+    font-family: 'Ferry';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 48px;
+    letter-spacing: 0.02em;
+
+    color: #000000;
+}
+
+.marginLog {
+    margin-left: 60px;
+}
+
+.picCharacters {
+    margin-left: 176px;
+    height: 343px;
+    width: 322px;
+    background-image: url("../../svg/login/Characters.svg");
+}
+
+.loginBlock {
+    width: 429px;
+    height: 523px;
+    margin-left: 100px;
+    margin-top: 40px;
+
+    background: #FFFFFF;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+}
+
+.picLock {
+    margin-left: 60px;
+    margin-right: -130px;
+    position: relative;
+    width: 75.22px;
+    height: 92.06px;
+    background-image: url("../../svg/login/lock.svg");
+}
+
+.logInText {
+
+    width: 49px;
+    height: 19px;
+    display: block;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+
+    color: #029491;
+}
+
+.loginMenu {
+
+    margin-left: 25px;
+}
+
+.loginLine {
+
+    width: 151px;
+    height: 2px;
+    left: 895px;
+    top: 214px;
+
+    background: #029491;
+}
+
+
+
+.registrMenuText {
+    width: 170px;
+    height: 19px;
+    display: block;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+
+    color: #C7C7C7;
+}
+
+.registrLine {
+    width: 213px;
+    height: 2px;
+    left: 1061px;
+    top: 214px;
+
+    background: #C7C7C7;
+}
+
+.textLoginBox {
+    width: 227px;
+    height: 19px;
+
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+
+    color: #949494;
+}
+
+.input {
+    width: 379px;
+    height: 43px;
+
+
+    background: #FFFFFF;
+    border: 1px solid #C7C7C7;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+}
+
+.buttonLogIn {
+    width: 379px;
+    height: 59px;
+    left: 895px;
+    top: 460px;
+    border: none;
+    outline: none;
+    background: #b8bcd3;
+    border-radius: 5px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+    /* identical to box height */
+
+    letter-spacing: 0.02em;
+
+    color: #FFFFFF;
 }
