--- a/my-app/src/components/Login/index.module.css
+++ b/my-app/src/components/Login/index.module.css
@@ -149,8 +149,7 @@
 .buttonLogIn {
     width: 379px;
     height: 59px;
-    left: 895px;
-    top: 460px;
+
     border: none;
     outline: none;
     background: #b8bcd3;
@@ -165,4 +164,72 @@
     letter-spacing: 0.02em;
 
     color: #FFFFFF;
+}
+
+.backupPassword {
+    width: 194px;
+    height: 17px;
+    border: none;
+    outline: none;
+    margin-left: 96px;
+
+    background-color: #FFFFFF;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+    margin-top: 7px;
+
+    letter-spacing: 0.02em;
+    text-decoration-line: underline;
+
+    color: #5970FF;
+}
+
+.picGoogle {
+    width: 59.46px;
+    height: 19.57px;
+    display: block;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 5px;
+    background-image: url("../../svg/login/google.svg");
+}
+
+.blockAlterLog {
+    margin-left: 8px;
+    margin-top: -4px;
+    background: #FFFFFF;
+    border: 1px solid rgba(89, 112, 255, 0.51);
+    border-radius: 3px;
+    width: 96px;
+    height: 31px;
+}
+
+.picFaceBook {
+    width: 59.46px;
+    height: 19.57px;
+    display: block;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 5px;
+    background-image: url("../../svg/login/FaceBook1.svg");
+}
+
+.picYandex {
+    width: 59.46px;
+    height: 19.57px;
+    display: block;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 5px;
+    background-image: url("../../svg/login/yandex1.svg");
 }
