--- a/my-app/src/components/Slider/index.module.css
+++ b/my-app/src/components/Slider/index.module.css
@@ -22,7 +22,7 @@
     left: 60px;
     top: -24px;
     margin-left: 60px;
-    background-image: url("../../svg/skan-head.svg");
+    background-image: url("../../svg/header/skan-head.svg");
 }
 
 .box_text {
