--- a/my-app/src/components/Search/index.module.css
+++ b/my-app/src/components/Search/index.module.css
@@ -115,7 +115,23 @@
     border: 1px solid #000000;
 }
 
+.inputError {
 
+
+
+    width: 242px;
+    height: 43px;
+    position: relative;
+    display: block;
+    margin-top: -30px;
+
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    color: red;
+    background: #FFFFFF;
+    border: 1px solid #fa0505;
+
+}
 
 .whideCheckbox {
     width: 420px;
