--- a/my-app/src/components/SearchScanRoute/index.module.css
+++ b/my-app/src/components/SearchScanRoute/index.module.css
@@ -162,3 +162,163 @@
 .rightArrow:hover {
     box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
+
+.documentMargin {
+    margin-top: 58px;
+    margin-bottom: 58px;
+    display: flex;
+}
+
+.element {
+    width: 641px;
+    height: 694px;
+    margin-left: 38px;
+    margin-right: 38px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+.h1_element {
+    width: 546px;
+    height: 62px;
+    text-align: center;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.02em;
+
+    color: #000000;
+}
+
+.element_box {
+    margin-top: 62px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 35px;
+}
+
+.element_yellowBlock {
+    width: 157px;
+    height: 18px;
+
+    background: #FFB64F;
+    border-radius: 5px;
+}
+
+.element_yellowBlock_p_text {
+    width: 132px;
+    height: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+
+    letter-spacing: 0.02em;
+
+    color: #000000;
+}
+
+.element_img {
+    width: 581px;
+    height: 158px;
+    left: 90px;
+    top: 1104px;
+    margin-top: 15px;
+    border-radius: 10px;
+}
+
+.element_p_boodytext {
+    width: 581px;
+    height: 228px;
+
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+
+    color: #000000;
+
+    opacity: 0.5;
+}
+
+.element_button {
+    width: 223px;
+    height: 46.54px;
+    left: 769px;
+    top: 1542px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+    border: none;
+    outline: none;
+    color: #000000;
+    background: #7CE3E1;
+    border-radius: 5px;
+}
+
+.element_h6_text {
+    width: 99px;
+    height: 19px;
+
+    margin-top: 30px;
+    margin-left: 260px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+
+    color: #949494;
+}
+
+.section_button {
+    width: 305px;
+    height: 59px;
+    left: 568px;
+    top: 1662px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background: #5970FF;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+    /* identical to box height */
+
+    letter-spacing: 0.04em;
+
+    color: #FFFFFF;
+}
+
+.centr {
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.element {
+    margin-top: 30px;
+}
