--- a/my-app/src/components/Slider/index.module.css
+++ b/my-app/src/components/Slider/index.module.css
@@ -3,9 +3,9 @@
     margin-bottom: 6px;
     width: 380px;
     height: 225px;
-    left: 94px;
-    top: 970px;
 
+    margin-left: 20px;
+    margin-right: 20px;
     background: #FFFFFF;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
@@ -17,12 +17,13 @@
 }
 
 .scan {
-    width: 141px;
-    height: 111px;
+    margin-top: 20px;
+    width: 60px;
+    height: 60px;
     left: 60px;
     top: -24px;
     margin-left: 60px;
-    background-image: url("../../svg/header/skan-head.svg");
+    background-image: url("./times.png");
 }
 
 .box_text {
